# fast-todo

./: Makefile  pyproject.toml
database/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
docker/: Dockerfile  app.env  docker-compose.yml  start.sh
fast_todo/: main.py
fast_todo/app/: app.py  config.py  dependencies.py  health.py  pg_pool.py
fast_todo/app/endpoints/: tasks.py  users.py
fast_todo/app/models/: tasks.py  users.py
fast_todo/app/repos/: task_repo.py  user_repo.py
fast_todo/app/token/: token_maker.py  token_payload.py
fast_todo/utils/: password.py  random.py
tests/: test_jwt_token.py  test_users.py
